# api-banco-central-gms

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
config/: database.py  logger.py  settings.py
migrations/: env.py
migrations/versions/: 668a123638b3_create_normatives_table.py  6e72c6237389_refactor_normatives_to_use_abstract_.py
models/: normative.py
services/: bcb_service.py  cvm_service.py  whatsapp_service.py
utils/: normative_data_utils.py  normative_list.py
