[project]
name = "gms-bcb-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "taskipy>=1.14.1",
    "typos>=1.44.0",
]


[tool.ruff]
line-length = 88
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
pre_lint = 'typos'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
build = 'docker compose build --no-cache'
run = 'docker compose up'
down = 'docker compose down'
downv = 'docker compose down -v'
