[project]
name = "gms-bcb-api"
version = "0.2.0"
description = "API para monitoramento de normativos do Banco Central do Brasil e da CVM"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "taskipy>=1.14.1",
    "typos>=1.44.0",
]


[tool.ruff]
line-length = 88
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
pre_lint = 'typos'
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
build = 'docker compose build --no-cache'
db_up = 'docker compose up -d postgres'
db_shell = 'docker compose exec postgres psql -U postgres'
evo_up = 'docker compose up -d evolution-api'
app_up = 'docker compose up --build app'
app_run = 'docker compose up app'
run = 'docker compose up'
rund = 'docker compose up -d'
down = 'docker compose down'
downv = 'docker compose down -v'
